Update and rename README.md to README.html

--- a/README.html
+++ b/README.html
@@ -6,3 +6,5 @@ Currently the Calls function of this App doesn't work because of the paid plans.
 Do download and test it. Believe me its fun :) 
 
 See its video at - https://drive.google.com/open?id=1vMJjP97paDP28PCP1llteckxsntcBBSa 
+
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Frandom&psig=AOvVaw2__f5ycxVm4oItWqMpozEj&ust=1592576202786000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLCyp-nGi-oCFQAAAAAdAAAAABAD">
